<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kolega</string>

    <!-- Configuration -->
    <string name="parse_application_id">4rZVijDe9wNownT9U9ouQEY1ZgxQsCiSzrAIXF7A</string>
    <string name="parse_client_key">qFttCFs42phv02xtEaUJVWMi6dPGjYyVaAp9MhJL</string>

    <!-- Generic -->
    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_ok">OK</string>
    <string name="generic_none">None</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_add">Add</string>
    <string name="generic_please_wait">Please Wait</string>
    <string name="generic_report">Report</string>
    <string name="generic_reported">Your report has been submitted.</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- Register Activity -->
    <string name="title_activity_register">Sign Up</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm">Confirm</string>
    <string name="register_button_register">Register</string>
    <string name="register_button_sign_in">Already have an account? Sign In</string>
    <string name="register_error">Something went wrong, and registration could not be completed. Please try again.</string>
    <string name="register_error_taken">That username is already taken. Please try again.</string>
    <string name="register_error_match">Your passwords don\'t match. Please try again.</string>
    <string name="register_registration_progress">Registration is in progress...</string>

    <!-- Setup Activity -->
    <string name="setup_profile_image">Set a profile picture</string>
    <string name="setup_profile_image_camera">Take a new photo</string>
    <string name="setup_profile_image_file">Choose an existing photo</string>
    <string name="setup_real_name">Real name</string>
    <string name="setup_major">Major</string>
    <string name="setup_label_school">School:</string>
    <string name="setup_school_select_button">Select a school</string>
    <string name="setup_continue_button">Continue</string>
    <string name="setup_error_required">Error. Please provide a real name, a major, and a school.</string>
    <string name="setup_upload_image_progress">Uploading image...</string>

    <!-- School Select Activity -->
    <string name="school_select_button">Select</string>
    <string name="school_select_new">Add another school</string>

    <!-- Sign In Activity -->
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_error">Invalid account credentials.</string>
    <string name="sign_in_progress">Signing in...</string>

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_classes">Classes</string>

    <string-array name="tab_items">
        <item>@string/tab_profile</item>
        <item>@string/tab_classes</item>
    </string-array>

    <!-- Profile Fragment -->
    <string name="description_profile_image">This is your current profile image.</string>
    <string name="label_profile_name">Name: </string>
    <string name="label_profile_school">School: </string>
    <string name="label_profile_major">Major: </string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="button_profile_edit">Edit Profile</string>
    
    <!-- Classes Fragment -->
    <string name="button_classes_new">Add another class</string>
    <string name="classes_loading">Loading classes...</string>

    <!-- Class Discussion Activity -->
    <string name="class_discussion_message">Enter a message</string>
    <string name="class_discussion_send">Send</string>
    <string name="class_discussion_refresh_button">Refresh</string>
    <string name="class_discussion_report">Report content that is inappropriate, offensive, or threatening.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setup">Edit Your Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_school_select">Select your school</string>
    <string name="title_activity_class_discussion">Class discussion</string>

</resources>
