<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dsmith86.github.io.kolega.registration.SetupActivity">

    <EditText
        android:id="@+id/realNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setup_real_name"/>

    <EditText
        android:id="@+id/majorEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setup_major"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_school" />

    <TextView
        android:id="@+id/schoolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_none" />

    <Button
        android:id="@+id/schoolSelectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_school_select_button" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_continue_button"/>

</LinearLayout>
